# lethal-company-sync-v2

./: README.md
client/: CMakeLists.txt  CMakeUserPresets.json  add-files.sh  build.sh  conanfile.txt  files.cmake
client/src/: constants.hpp  main.cpp
client/src/fs/: files.c  installs.c
client/src/mod/: mod.cpp  mod.hpp
client/src/modpack/: modpack.cpp  modpack.hpp
client/src/network/: error.cpp  network.hpp
client/src/util/: hashing.c  time.cpp
server/src/routes/: ANY.go  build.go
server/src/routes/report/mod/: GET.go
server/src/routes/report/modpack/: GET.go
server/src/routes/report/modpack/__pack__/: POST.go
server/src/routes/report/modpack/__pack__/__mod__/: POST.go
website/client/src/: constants.hpp
website/client/src/modpack/: modpack.cpp  modpack.hpp
